adds positionreport cpp files. adds copyright information

--- a/EscapeTheRoom/Config/DefaultGame.ini
+++ b/EscapeTheRoom/Config/DefaultGame.ini
@@ -1,6 +1,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=8816B9AD410F16C72C87E1AF98910B46
+CompanyName=Christopher Sexton
+CompanyDistinguishedName=Chris Sexton
+CopyrightNotice=Copyright Christopher Sexton 2020.
 
 [StartupActions]
 bAddPacks=True
